If applied, this commit will fix dropdown text overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@ option {
     color: #2e2e2e;
     border-radius: 5px;
     font-family: lato;
-    font-size: 15px;
+    font-size: 0.85vw;
 }
 
 h2{
